--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <nav>
         <ul>
-           <li><a href="#">Dome</a></li>
+           <li><a href="#">Home</a></li>
            <li><a href="#">About Us</a></li>
            <li><a href="#">Photo</a></li> 
            <li><a href="#">Blog</a></li> 
